--- a/web/src/components/apps/clips/ClipsApp.module.scss
+++ b/web/src/components/apps/clips/ClipsApp.module.scss
@@ -346,7 +346,7 @@
 // FAB
 .fabContainer {
   position: fixed;
-  bottom: 24px;
+  bottom: calc(24px + var(--phone-bottom-ui-gap, 0px));
   right: 24px;
   z-index: 100;
   display: flex;
